--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 <--AI CHATBOT-->
 This project is created by implementing file handling 
 concept in python.
-The more user interact with it the most powerful tool it become
+The more user interact with it the more powerful tool it become
