--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-<--AI CHATBOT-->
-This project is created by implementing file handling 
-concept in python.
-The more user interact with it the more powerful tool it become
+# <--AI CHATBOT-->
+## In this code, when a user ask any question, it matches all words of question with questions in question.txt file and print answer from answer.txt which matches most of most of the words if answer is not right then it request the user to write answer for future uses
+## This project is created by implementing file handling concept in python.
+## The more user interact with it the more powerful tool it become
